@@ -429,12 +429,13 @@ class StdlibChecker(DeprecatedMixin, BaseChecker):
             "from code that is not actively being debugged.",
         ),
         "W1516": (
-            "'lru_cache' without 'maxsize' will keep all method args alive indefinitely, including 'self'",
+            "'lru_cache' without a set 'maxsize' will keep all method args alive indefinitely, including 'self'",
             "lru-cache-decorating-method",
             "By decorating a method with lru_cache the 'self' argument will be linked to "
             "the lru_cache function and therefore never garbage collected. Unless your instance "
             "will never need to be garbage collected (singleton) it is recommended to refactor "
-            "code to avoid this pattern or add a maxsize to the cache.",
+            "code to avoid this pattern or add a maxsize to the cache."
+            "The default value for maxsize is 128.",
         ),
     }
 
@@ -573,20 +574,20 @@ class StdlibChecker(DeprecatedMixin, BaseChecker):
             try:
                 for infered_node in d_node.infer():
                     q_name = infered_node.qname()
-                    if q_name in NON_INSTANCE_METHODS:
-                        return
-                    if q_name not in LRU_CACHE:
+                    if q_name in NON_INSTANCE_METHODS or q_name not in LRU_CACHE:
                         return
 
-                    # Check if there is a maxsize argument to the call
+                    # Check if there is a maxsize argument set to None in the call
                     if isinstance(d_node, nodes.Call):
                         try:
-                            utils.get_argument_from_call(
+                            arg = utils.get_argument_from_call(
                                 d_node, position=0, keyword="maxsize"
                             )
-                            return
                         except utils.NoSuchArgumentError:
-                            pass
+                            return
+
+                        if not isinstance(arg, nodes.Const) or arg.value is not None:
+                            return
 
                     lru_cache_nodes.append(d_node)
                     break
